syntax = "proto3";
package rofi.messages;

import "connectorCmd.proto";
import "connectorPacket.proto";
import "connectorPowerState.proto";

message ConnectorResp {
    int32 connector = 1;
    ConnectorCmd.Type cmdType = 2;

    Packet packet = 3;
    PowerState powerState = 4;
}
